[package]
name = "crankit-input"
version = "0.2.0"
license = "Unlicense"
authors = ["Jonathan Cornaz"]
edition = "2021"
repository = "https://github.com/jcornaz/crankit-input"
description = "An ergonomic input API for the playdate"
categories = ["api-bindings", "game-development", "no-std"]
keywords = ["playdate", "gamedev", "no_std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--show-type-layout"]
default-target = "thumbv7em-none-eabihf"
cargo-args = [
	"-Zunstable-options",
	"-Zbuild-std=core,alloc",
]

[package.metadata.playdate]
bundle-id = "com.github.jcornaz.crankit-input"

[dependencies]
playdate-sys = { version = "0.2.11", default-features = false }

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lints.clippy]
exhaustive_enums = "deny"
exhaustive_structs = "deny"
pedantic = "warn"

